syntax = "proto3";

message SearchRequest {
  string query = 1;
}

message SearchResponse {
  repeated string ids = 1;
}

service IndexService {
  rpc Search (SearchRequest) returns (SearchResponse);
}
